fixing module access issue on jvm jigsaw